--- a/.env
+++ b/.env
@@ -1,13 +1,8 @@
-# Mongo root (para init)
 MONGO_ROOT_USER=root
 MONGO_ROOT_PWD=rootpwd
-
-# Tu base de datos y usuario de aplicación
 APP_DB=movies_db
-APP_USER=liang
-APP_PWD=liang
-
-# Conexión que usará tu código
+APP_USER=jibm23
+APP_PWD=nichinonibastardo
 DB_HOST=mongo
 DB_NAME=${APP_DB}
 DB_USER=${APP_USER}
