--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,27 @@ data/db/
 ehthumbs.db
 Thumbs.db
 s
-/data
+
+# Datos crudos y limpiados (no versionar)
+data/
+data_clean/
+data_cleaned/
+app/data/
+app/data_clean/
+app/_preview/
+*_preview/
+
+.ipynb_checkpoints/
+
+
+.env*
+.env.jibm
+data/
+data_clean/
+data_cleaned/
+app/data/
+app/data_clean/
+*.ipynb_checkpoints/
+.env*
+.venv/
+
