--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,10 @@
 haversine==2.8.0
 pymongo==4.10.1
 tabulate==0.9.0
+pandas==2.3.2
+numpy>=1.23.0
+matplotlib>=3.7.0
+seaborn>=0.13.0
+jupyter>=1.0.0
+tqdm>=4.65.0
+python-dateutil>=2.9.0
