Queries corregidas, algunos glitches tambien

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 MONGO_ROOT_USER=root
 MONGO_ROOT_PWD=rootpwd
 APP_DB=movies_db
-APP_USER=jibm23
-APP_PWD=nichinonibastardo
+APP_USER=liang
+APP_PWD=liang
 DB_HOST=mongo
 DB_NAME=${APP_DB}
 DB_USER=${APP_USER}
